# Pepega-Inject

./: CMakeLists.txt  README.md  installer.pyw  shadow_installer.py  title-render.html
installer/include/: actionButtons.hpp  colors.hpp  constants.hpp  contentPanel.hpp  formatStringElement.hpp  installationFinish.hpp  installationProcess.hpp  installationStart.hpp  installer.hpp  mainWindow.hpp  os_preproc.hpp  scaledBitmap.hpp  titlePanel.hpp  utility.hpp
installer/resources/include/: resources.hpp
installer/resources/source/: display.cpp  icon.res  injector.cpp
installer/source/: actionButtons.cpp  contentPanel.cpp  installationFinish.cpp  installationProcess.cpp  installationStart.cpp  installer.cpp  main.cpp  mainWindow.cpp  scaledBitmap.cpp  titlePanel.cpp
misc/: custom-icon.pdn
pepega_inject/: index.js
pepega_inject/pepega-inject/: filework.js  injector.js  pepega-loader.js  request.js
pepega_inject/pepega-inject/plugins/quality-of-life-theme/: settings.json  style.css
pepega_inject/pepega-inject/plugins/quality-of-life-theme/formatters/: content-display-formatter.js  content-formatter.js  context-menu-manager.js  download-formatter.js  message-formatter.js  video-formatter.js
pepega_inject/pepega-inject/plugins/quality-of-life-theme/utility/: downloader.js  open-window.js  resources.js
resource_builder/: create_icon.bat  icon.rc  resource_builder.py  resources.yaml
src/: index.js
src/pepega-inject/: css-loader.js  filework.js  injector.js  logger.js  request.js
src/pepega-inject/plugins/quality-of-life-theme/: settings.json  style.css
src/pepega-inject/plugins/quality-of-life-theme/formatters/: content-display-formatter.js  content-formatter.js  context-menu-manager.js  download-formatter.js  message-formatter.js  video-formatter.js
src/pepega-inject/plugins/quality-of-life-theme/utility/: async-execute.js  clipboard-manager.js  downloader.js  ipc-qolt.js  observer-array.js  open-window.js
watcher/include/: watcher.hpp
watcher/source/: main.cpp  wathcer.cpp
